--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
       <div class="card">
           <div class="card-body">
               <form action = "/upload" method = "POST" enctype = "multipart/form-data">
-                  <label for="video-file">Select a video</label>
+                  <label for="video-file">Select an audio file</label>
                   <input type="file" class="form-control-file" id="video-file" name="file">
                   <button type="submit" class="btn btn-md btn-danger">Submit</button>
               </form>
@@ -21,5 +21,7 @@
     
 
   </div>
+
+
 
 {% endblock %}
